force-app/main/default/objects/Study_Term__c/Study_Term__c.object-meta.xml
<CustomObject>
    <description>The academic year and academic term for an educational institution.</description>
    <label>Study Term</label>
    <nameField>
        <label>Study Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>