force-app/main/default/objects/Study_Term__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The academic year for the study term</description>
    <inlineHelpText>The academic year for the study term</inlineHelpText>
    <label>Academic Year</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Term__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Academic_Year</value>
        </filterItems>
        <infoMessage>Please select an academic year study term.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Term__c</referenceTo>
    <relationshipLabel>Study Terms</relationshipLabel>
    <relationshipName>Study_Academic_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>