force-app/main/default/objects/Study_Term__c/fields/Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Name__c</fullName>
    <description>An optional display name shown to the students in the community instead of the regular Name.</description>
    <inlineHelpText>An optional display name shown to the students in the community instead of the regular Name.</inlineHelpText>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>