force-app/main/default/objects/Study_Term__c/fields/Apply_Non_Repayable_FA_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Non_Repayable_FA_Date__c</fullName>
    <description>The date for applying non repayable financial aid on transaction orders. This can be used by scheduled flow to update the “Apply Non Repayable Financial Aid” checkbox.</description>
    <inlineHelpText>The date for applying non repayable financial aid on transaction orders. This can be used by scheduled flow to update the “Apply Non Repayable Financial Aid” checkbox.</inlineHelpText>
    <label>Apply Non Repayable FA Date</label>
    <type>Date</type>
</CustomField>