force-app/main/default/objects/Study_Term__c/fields/Apply_Payment__c.field-meta.xml
<CustomField>
    <fullName>Apply_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to applying payments transaction orders.</description>
    <inlineHelpText>Indicator to applying payments on transaction orders.</inlineHelpText>
    <label>Apply Payment</label>
    <type>Checkbox</type>
</CustomField>