force-app/main/default/objects/Study_Term__c/fields/Apply_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Payment_Date__c</fullName>
    <description>The date for applying payments on transaction orders. This can be used scheduled flow to update the “Apply Payment” checkbox.</description>
    <inlineHelpText>The date for applying payments on transaction orders. This can be used scheduled flow to update the “Apply Payment” checkbox.</inlineHelpText>
    <label>Apply Payment Date</label>
    <type>Date</type>
</CustomField>