force-app/main/default/objects/Study_Term__c/fields/Apply_Repayable_FA_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Repayable_FA_Date__c</fullName>
    <description>The date for applying repayable financial aid on transaction orders. This can be used scheduled flow to update the “Apply Repayable Financial Aid” checkbox.</description>
    <inlineHelpText>The date for applying repayable financial aid on transaction orders. This can be used scheduled flow to update the “Apply Repayable Financial Aid” checkbox.</inlineHelpText>
    <label>Apply Repayable FA Date</label>
    <type>Date</type>
</CustomField>