force-app/main/default/objects/Study_Term__c/fields/Census_Date__c.field-meta.xml
<CustomField>
    <fullName>Census_Date__c</fullName>
    <label>Census Date</label>
    <type>Date</type>
</CustomField>