force-app/main/default/objects/Study_Term__c/fields/Disburse_Non_Repayable_FA__c.field-meta.xml
<CustomField>
    <fullName>Disburse_Non_Repayable_FA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to disburse Non Repayable Financial Aid as transaction payment if applicable.</description>
    <inlineHelpText>Indicator to allow Non Repayable Financial Aid as transaction payment if applicable.</inlineHelpText>
    <label>Disburse Non Repayable FA</label>
    <type>Checkbox</type>
</CustomField>