force-app/main/default/objects/Study_Term__c/fields/Disburse_Non_Repayable_FA_Date__c.field-meta.xml
<CustomField>
    <fullName>Disburse_Non_Repayable_FA_Date__c</fullName>
    <description>The date for disbursing non repayable financial aid. This can be used by scheduled flow to update the “Disburse Non Repayable Financial Aid” checkbox.</description>
    <inlineHelpText>The date for disbursing non repayable financial aid. This can be used by scheduled flow to update the “Disburse Non Repayable Financial Aid” checkbox.</inlineHelpText>
    <label>Disburse Non Repayable FA Date</label>
    <type>Date</type>
</CustomField>