force-app/main/default/objects/Study_Term__c/fields/Disburse_Repayable_FA_Date__c.field-meta.xml
<CustomField>
    <fullName>Disburse_Repayable_FA_Date__c</fullName>
    <description>The date for disbursing repayable financial aid. This can be used scheduled flow to update the “Disburse Repayable Financial Aid” checkbox.</description>
    <inlineHelpText>The date for disbursing repayable financial aid. This can be used scheduled flow to update the “Disburse Repayable Financial Aid” checkbox.</inlineHelpText>
    <label>Disburse Repayable FA Date</label>
    <type>Date</type>
</CustomField>