force-app/main/default/objects/Study_Term__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>IF(ISBLANK(Alternate_Name__c), Name, Alternate_Name__c)</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>