force-app/main/default/objects/Study_Term__c/fields/Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Educational Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Educational_Institution</value>
        </filterItems>
        <infoMessage>Please select an educational institution account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Study Terms</relationshipLabel>
    <relationshipName>Study_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>