force-app/main/default/objects/Study_Term__c/fields/Enable_Cohort_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Cohort_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control the enrollment using cohort enrollment settings</description>
    <inlineHelpText>Control the enrollment using cohort enrollment settings</inlineHelpText>
    <label>Enable Cohort Enrollment</label>
    <type>Checkbox</type>
</CustomField>