force-app/main/default/objects/Study_Term__c/fields/Enrollment_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Close_Date__c</fullName>
    <description>The date and time that enrollments close for this term</description>
    <inlineHelpText>The date and time that enrollments close for this term</inlineHelpText>
    <label>Enrollment Close Date</label>
    <type>DateTime</type>
</CustomField>