force-app/main/default/objects/Study_Term__c/fields/Enrollment_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Open_Date__c</fullName>
    <description>The date and time that enrollments open for this term</description>
    <inlineHelpText>The date and time that enrollments open for this term</inlineHelpText>
    <label>Enrollment Open Date</label>
    <type>DateTime</type>
</CustomField>