force-app/main/default/objects/Study_Term__c/fields/Fee_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Due_Date__c</fullName>
    <description>The due date for student fees transaction order. This is also used to identify the study fee matrix.</description>
    <inlineHelpText>The due date for student fees transaction order. This is also used to identify the study fee matrix.</inlineHelpText>
    <label>Fee Due Date</label>
    <type>Date</type>
</CustomField>