force-app/main/default/objects/Study_Term__c/fields/For_Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>For_Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this to make the term hidden from external users e.g, students enrollment wizard</description>
    <inlineHelpText>Tick this to make the term hidden from external users e.g, students enrollment wizard</inlineHelpText>
    <label>For Internal Only</label>
    <type>Checkbox</type>
</CustomField>