force-app/main/default/objects/Study_Term__c/fields/Generate_Transaction_Orders__c.field-meta.xml
<CustomField>
    <fullName>Generate_Transaction_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To generate transaction orders to collect fees from students.</description>
    <inlineHelpText>To generate transaction orders to collect fees from students.</inlineHelpText>
    <label>Generate Transaction Orders</label>
    <type>Checkbox</type>
</CustomField>