force-app/main/default/objects/Study_Term__c/fields/Generate_Transaction_Orders_Date__c.field-meta.xml
<CustomField>
    <fullName>Generate_Transaction_Orders_Date__c</fullName>
    <description>The date for generating transaction orders to collect fees from students. This can be used by scheduled flow to update the “Generate Transaction Orders” checkbox.</description>
    <inlineHelpText>The date for generating transaction orders to collect fees from students. This can be used by scheduled flow to update the “Generate Transaction Orders” checkbox.</inlineHelpText>
    <label>Generate Transaction Orders Date</label>
    <type>Date</type>
</CustomField>