force-app/main/default/objects/Study_Term__c/fields/Pre_enrollment_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_enrollment_Open_Date__c</fullName>
    <description>Default pre-enrollment date for all related study offerings and sessions.</description>
    <inlineHelpText>Default pre-enrollment date for all related study offerings and sessions.</inlineHelpText>
    <label>Pre-enrollment Open Date</label>
    <type>DateTime</type>
</CustomField>