force-app/main/default/objects/Study_Term__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semester</fullName>
                <default>true</default>
                <label>Semester</label>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>School Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>