force-app/main/default/objects/Study_Term__c/fields/Unit_Enrollment_Setting__c.field-meta.xml
<CustomField>
    <fullName>Unit_Enrollment_Setting__c</fullName>
    <inlineHelpText>The setting for enrollment units. e.g., &quot;Allow Enrolled Pre-requisite Units&quot; allow student to enroll pre-requisite unit before receive the result of their current unit in the next term.</inlineHelpText>
    <label>Unit Enrollment Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Allow Enrolled Pre-requisite Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>