force-app/main/default/objects/Study_Term__c/recordTypes/Academic_Term.recordType-meta.xml
<RecordType>
    <fullName>Academic_Term</fullName>
    <active>true</active>
    <description>Academic term</description>
    <label>Academic Term</label>
</RecordType>