force-app/main/default/objects/Study_Term__c/recordTypes/Academic_Year.recordType-meta.xml
<RecordType>
    <fullName>Academic_Year</fullName>
    <active>true</active>
    <description>Academic year</description>
    <label>Academic Year</label>
</RecordType>