force-app/main/default/objects/Study_Term__c/validationRules/Validate_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Date</fullName>
    <active>true</active>
    <description>To ensure that the End Date is not earlier than the Start Date</description>
    <errorConditionFormula>RecordType.DeveloperName == &quot;Academic_Term&quot; &amp;&amp; End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date must be after the start date.</errorMessage>
</ValidationRule>