force-app/main/default/objects/Study_Term__c/listViews/Next_Years_Academic_Terms.listView-meta.xml
<ListView>
    <fullName>Next_Years_Academic_Terms</fullName>
    <columns>NAME</columns>
    <columns>Academic_Year__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_YEAR</value>
    </filters>
    <label>Next Year&apos;s Academic Terms</label>
</ListView>